fixed word wrap issue in diff view

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -755,6 +755,11 @@ h5 {
   align-self: center;
 }
 
+.project-diff-view .react-diff-42iver-word-diff{
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
 .project-diff-view h2 {
   width: 50%;
   margin-left: 50px;
